--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="history">История</string>
     <string name="ok">OK</string>
     <string name="enterLink">Введите ссылку на картинку</string>
+    <string name="installSecondApp">Установите, пожалуйста, второе приложение!</string>
 </resources>
